# macrospace

./: Cargo.toml
core/: Cargo.toml
core/src/: generate_item_macro.rs  generate_macrospace_invokation.rs  get_macro.rs  item_argument.rs  item_type_spec.rs  lib.rs  multi_item_macro_input.rs  sanitize.rs
macros/: Cargo.toml
macros/src/: check_item_type.rs  import.rs  invoke.rs  invoke_item_macro.rs  item.rs  lib.rs  parse_args.rs  transform_use.rs
src/: enum_utils.rs  generics.rs  lib.rs  path_utils.rs  stream_utils.rs  struct_utils.rs
src/pattern/: bindings.rs  collect_visitor.rs  cursor_parse.rs  dummy_substitution_visitor.rs  dummy_tokens.rs  expect.rs  group_pattern.rs  index.rs  index_bindings.rs  match_visitor.rs  mod.rs  parameter.rs  parameter_schema.rs  parse_binding.rs  pattern.rs  pattern_buffer.rs  pattern_item.rs  pattern_visitor.rs  punct_group.rs  reconstruct.rs  repetition_pattern.rs  structured_bindings.rs  substitution_visitor.rs  tokenize_binding.rs  type_annotation.rs  visitor.rs
src/substitute/: argument.rs  mod.rs  parameter.rs  substitute.rs  substitutions.rs
