[package]
name = "macrospace"
version = "0.1.0"
edition = "2024"

[dependencies]
macrospace-core = {path = "core"}
macrospace-macros = {path = "macros"}

proc-macro2 = {version = "1.0"}
syn = {version = "2.0", features = ["fold"]}
quote = {version = "1.0"}
syn_derive = {version = "0.2"}

itertools = {version = "0.14"}
